tests/ui/auto_enum/def_site.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `__Enumdef_site`
 --> $DIR/def_site.rs:9:20
  |
9 |             return __Enumdef_site::__Variant0(2..4);
  |                    ^^^^^^^^^^^^^^ use of undeclared crate or module `__Enumdef_site`
